--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,19 @@
 main{
     max-width: 840px;
+    margin: 0 auto;
+}
+
+main img{
+    width: 150px;
+    height: auto;
+    display: block;
+    margin: 10px auto;
+    box-shadow: 10px 10px 30px #333;
+}
+
+p{
+    padding: 0;
+    margin: 1rem auto;
 }
 
 aside{
@@ -15,9 +29,11 @@ aside{
 aside img{
     width: 20rem;
     height: auto;
+    box-shadow: 10px 10px 30px #333;
 }
 
 footer{
+    background-color: #333;
     margin-top: 2rem;
     border-top: 1px solid #ccc;
     text-align: center;
