--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,8 @@ main{
 main img{
     width: 150px;
     height: auto;
+    border: 1px solid rgb(0,0,0 / 10%); 
+    padding: 1rem;
     display: block;
     margin: 10px auto;
     box-shadow: 10px 10px 30px #333;
@@ -17,8 +19,32 @@ p{
     margin: 1rem auto;
 }
 
+nav{
+    background-color: #333;
+    text-align: center;
+    padding: 10px;
+}
+
+nav a{
+    color: #ccc
+    text-decoration: none;
+    margin: 0 15px;
+    font-weight: bold;
+}
+
+nav a:hover{
+    text-decoration: underline;
+}
+
+h1{
+    color: #333;
+    text-align: center;
+    font-size: 2rem;
+}
+
 aside{
     width: 30rem;
+    height: auto;
     margin: 2rem auto;
     border: 1px solid rgb(0 0 0 / 0.2); /*1*/
     padding: 1rem;
@@ -28,8 +54,8 @@ aside{
 }
 
 aside img{
-    width: 20rem;
-    height: auto;
+    width: 200px;
+    height: 0 auto;
     box-shadow: 10px 10px 30px #333;
 }
 
