--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,8 @@ nav{
     background-color: #333;
     text-align: center;
     padding: 10px;
+    display: block;
+    
 }
 
 nav a{
@@ -55,7 +57,7 @@ aside{
 
 aside img{
     width: 200px;
-    height: 0 auto;
+    height: auto;
     box-shadow: 10px 10px 30px #333;
 }
 
