--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -45,6 +45,10 @@ header nav a {
   font-weight: bold;
 }
 
+header nav a:hover {
+  text-decoration: underline;
+}
+
 /* Headings */
 h1, h2 {
   font-family: var(--heading-font);
