--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,12 +20,17 @@ body {
   font-family: var(--body-font);
   color: var(--accent1-color);
   background-color: #fff;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 /* Page Layout */
 header, main, footer {
   max-width: 840;
   margin: 0 auto;
+  padding: 0;
 }
 
 /* Header */
@@ -33,7 +38,8 @@ header {
   background-color: var(--primary-color);
   color: var(--accent2-color);
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: left;
   justify-content: space-between;
   padding: 12px;
 }
@@ -52,9 +58,13 @@ header nav a:hover {
 /* Headings */
 h1, h2 {
   font-family: var(--heading-font);
-  color: var(--primary-color);
+  color: white;
   text-align: center;
+  background-color: var(--accent1-color);
   font-weight: bold;
+  margin: auto;
+  padding: 20px;
+  width: auto;
 }
 
 /* Base spacing */
@@ -80,15 +90,16 @@ nav, p, section, article {
   text-align: center;
   opacity: 0.8;
   background-color: var(--accent1-color);
-  color: #fff;
+  color: white;
 }
 .hero article {
   position: absolute;
   bottom: 20px;
   left: 20px;
+  right: 20px;
   background-color: rgba(255, 255, 255, 0.85);
   padding: 16px;
-  max-width: 400px;
+  max-width: 100%;
   border-radius: 8px;
 }
 .hero article img {
